2002-07-21  Jeff Freedman  <jeff@amy.nerble.net>

	* drag.cc,gamerend.cc:  Dragging_info::paint() added.

2002-07-20  Jeff Freedman  <jeff@amy.nerble.net>

	* mouse.cc,font.cc,etc.:  More things kind-of work in OpenGL
	(though mouse doesn't clean up after itself and conversation text
	disappears, so there's LOTs to fix.)

2002-07-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: SIGCHLD handler to clean up forked playmidi processes
	* configure.in: check for sys/wait.h, signal.h (see above)
	* lots: modal-gump-keyevent-handling related cleanup

2002-07-16  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/flags.h,actors.h,etc:  Moved 'dont_move' and
	'no_spell_casting' flags to the spots in Obj_flags where they're
	referred to in Usecode.
	*imagewin/ibuf.{cc,h}:  rgba() converts to 32-bit format (untested).

2002-07-16  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* orangedress.shp, bluedress.shp: new paperdoll art by sbx

2002-07-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/bg/greentop.shp: new paperdoll art. Thanks sbx!
	* usecode/ucxt/Makefile.am: fixed --disable-tools
	* configure.in: install gnome things to $(datadir)
	(instead of $(GNOMEDATADIR)). This allows non-root installs.
	* data/Makefile.am: don't install estudio data when not building that

2002-07-14  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Spellbook_gump.cc: fixed up offsets; fixed NULL shape error

2002-07-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* chunks.cc: worked around compiler bug (gcc 2.96-110) for is_blocked

2002-07-12  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc (public): Call_guards logic moved to
	Actor::reduce_health(), so spells will get you in trouble.

2002-07-11  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.h,actors.cc:  All NPC's except Avatar get 4-frame
	(smooth) walking.  This matches the original U7.

2002-07-10  Jeff Freedman  <jsf@usf-cf-x86-linux-1>
