@@ -27,6 +27,7 @@ class Configuration;
 class Game_window;
 class KeyBinder;
 class Tile_coord;
+class Paintable;
 
 /*
  *	Get a click, or, optionally, a keyboard char.
@@ -40,7 +41,8 @@ extern int Get_click
 	int& x, int& y,			// Location returned (if not ESC).
 	Mouse::Mouse_shapes shape,	// Mouse shape to use.
 	char *chr = 0,			// Char. returned if not null.
-	bool drag_ok = false		// Can drag while here.
+	bool drag_ok = false,		// Can drag while here.
+	Paintable *paint = 0		// Paint over everything else.
 	);
 
 /*
