@@ -433,6 +433,8 @@ void Newfile_gump::paint
 	(
 	)
 {
+	if (!games)
+		return;			// No list, so skip out.
 	Gump::paint();
 
 	// Paint text objects.
