@@ -1,5 +1,8 @@
 2002-07-21  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* gumps/Newfile_gump.cc (Newfile_gump): Fixed crash I caused.
+	* exult.cc, etc:  Get_click takes a Paintable parameter.
+
 	* drag.cc,gamerend.cc:  Dragging_info::paint() added.
 
 2002-07-20  Jeff Freedman  <jeff@amy.nerble.net>
